Fixed profile follow counter spacing

--- a/eros/styles/sidebar.module.css
+++ b/eros/styles/sidebar.module.css
@@ -84,7 +84,7 @@
     align-items: center;
 
     width: 3.2812em;
-    height: 3.0937em;
+    height: 2.9em;
 
     /*auto layout */
     flex: none;
